# LaVista

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yaml
cmake/: find_deps.cmake
examples/: CMakeLists.txt
examples/embedded-iavis/: CMakeLists.txt
examples/embedded-iavis/cpp/: main.cpp
examples/hello-lavista/: CMakeLists.txt
examples/hello-lavista/cpp/: main.cpp
include/LaVista/: LaVista.hpp
spa-template/: package-lock.json  package.json
spa-template/src/layouts/: Layout.astro
spa-template/src/pages/: index.astro
spa-template/src/styles/: global.css
src/: CMakeLists.txt
src/cpp/: file_dialogs.cpp  internal.cpp  internal_internal.cpp  window_management.cpp
src/cpp/platform/fallback/: window_display_spa_fallback.cpp
src/cpp/platform/linux/: display_management_linux.cpp  spa_bundle_loader_linux.cpp  window_platform_linux.cpp
src/cpp/platform/win64/: display_management_win64.cpp  spa_bundle_loader_win64.cpp  webview_management_win64.cpp  window_platform_win64.cpp
src/hpp/: LaVista_internal.hpp
src/hpp/platform/linux/: LaVista_gtk_webview.hpp  LaVista_platform_context.hpp
src/hpp/platform/win64/: LaVista_platform_context.hpp  LaVista_webview2.hpp
src/modules/: lavista.cppm  lavista.definitions.cppm  lavista.internal.cppm
tests/cpp/: main.cpp
